# libnss_usrfiles

./: .gitignore  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  update_source.sh
src/: Makefile.am  compat.h  ether.h  files-XXX.c  files-alias.c  files-ethers.c  files-initgroups.c  files-parse.c  kernel-features.h  libnss_usrfiles.map  nss_loader-test.c  nsswitch.h  parse-grp.c  parse-pwd.c  parse-spwd.c
